# types-flame

./: pyproject.toml
flame-stubs/: __init__.pyi
hook/: stubgen.py
