[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "types-flame"
description = "Python stubs for the Autodesk Flame Python API"
version = "2024.2.0"
requires-python = ">=3.9"
readme = "README.md"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Typing :: Stubs Only",
]
keywords = ["types", "graphics", "VFX"]
authors = [{name = "Beat Reichenbach", email = "beatreichenbach@users.noreply.github.com"}]

[project.optional-dependencies]
dev = ["black>=24.0"]

[project.urls]
homepage = "https://github.com/beatreichenbach/types-flame"
issues = "https://github.com/beatreichenbach/types-flame/issues"
repository = "https://github.com/beatreichenbach/types-flame.git"

[tool.setuptools.packages.find]
include = ["flame-stubs"]

[tool.black]
skip-string-normalization = true
